--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ footer .credit a {
     position: absolute;
     top: 100%;
     right: -100%;
-    background-color: #ffff;
+    background-color: #222;
     width: 30rem;
     height: 100vh;
     transition: 0.3s;
@@ -401,7 +401,7 @@ footer .credit a {
   }
 
   .navbar .navbar-nav a {
-    color: var(--background);
+    color: #fff;
     display: block;
     margin: 1.5rem;
     padding: 0.5rem;
