--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,17 @@ body {
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
 
+.hero .content .cta:hover {
+  margin-top: 1.4rem;
+  display: inline-block;
+  padding: 1rem 1.5rem;
+  font-size: 1.5rem;
+  color: #222;
+  background-color: #793511;
+  border-radius: 0.4rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
 /* about section */
 
 .about,
