--- a/css/style.css
+++ b/css/style.css
@@ -192,8 +192,8 @@ body {
   display: inline-block;
   padding: 1rem 1.5rem;
   font-size: 1.5rem;
-  color: #222;
-  background-color: #793511;
+  color: var(--primary);
+  background-color: #fff;
   border-radius: 0.4rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
