--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,18 @@ body {
   cursor: pointer;
 }
 
+.contact .row form .btn:hover {
+  margin-top: 1.4rem;
+  display: inline-block;
+  padding: 1rem 1.5rem;
+  font-size: 1.5rem;
+  color: var(--primary);
+  background-color: #fff;
+  border-radius: 0.4rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  cursor: pointer;
+}
+
 footer {
   background-color: var(--primary);
   text-align: center;
