--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ body {
   line-height: 1.3;
   font-weight: 100;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 2);
-  mix-blend-mode: difference;
+  mix-blend-mode: hard-light;
 }
 
 .hero .content .cta {
