feat: add products menu

--- a/css/style.css
+++ b/css/style.css
@@ -202,12 +202,14 @@ body {
 
 .about,
 .menu,
+.product,
 .contact {
   padding: 8rem 7% 1.4rem;
 }
 
 .about h2,
 .menu h2,
+.products h2,
 .contact h2 {
   font-size: 2.6rem;
   margin-bottom: 3rem;
@@ -215,6 +217,7 @@ body {
 
 .about h2 span,
 .menu h2 span,
+.products h2 span,
 .contact h2 span {
   color: var(--primary);
 }
@@ -251,12 +254,14 @@ body {
 
 /* menu section */
 
-.menu h2 {
+.menu h2,
+.products h2 {
   margin-bottom: 1rem;
   text-align: center;
 }
 
-.menu p {
+.menu p,
+.products p {
   text-align: center;
   font-weight: 100;
   line-height: 1.6;
@@ -282,6 +287,80 @@ body {
 
 .menu .row .menu-card .menu-card-title {
   margin-top: 1rem auto 1rem;
+}
+
+/* products section */
+
+.products .row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+  padding: 4rem;
+  margin-top: 4rem;
+}
+
+.products .product-card {
+  text-align: center;
+  border: 1px solid #eee;
+  padding: 2rem;
+  border-radius: 0.4rem;
+}
+
+.products .product-icons {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  display: flex;
+}
+
+.products .product-icons a {
+  width: 4rem;
+  height: 4rem;
+  color: #fff;
+  margin: 0.3rem;
+  border: 1px solid #eee;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.products .product-icons a:hover {
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+}
+
+.products .product-image {
+  padding: 1rem 0;
+}
+
+.products .product-image img {
+  height: 25rem;
+}
+
+.products .product-content h3 {
+  font-size: 2rem;
+}
+
+.products .product-stars {
+  font-size: 1.7rem;
+  padding: 0.8rem;
+  color: var(--primary);
+}
+
+.products .product-stars .star-full {
+  fill: var(--primary);
+}
+
+.products .product-price {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.products .product-price span {
+  text-decoration: line-through;
+  font-weight: lighter;
+  font-size: 1rem;
 }
 
 /* contact section */
