--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,57 @@ body {
   color: var(--background);
 }
 
+/* shopping cart */
+.shopping-cart {
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  height: 100vh;
+  width: 35rem;
+  padding: 0 1.5rem;
+  color: #fff;
+  background-color: #222;
+  transition: 0.8s;
+}
+
+.shopping-cart.active {
+  right: 0;
+}
+
+.shopping-cart .cart-item {
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px dashed #fff;
+  position: relative;
+}
+
+.shopping-cart img {
+  height: 5rem;
+  border-radius: 50%;
+}
+
+.shopping-card h3 {
+  font-size: 1.6rem;
+  padding-bottom: 0.5rem;
+}
+
+.shopping-cart .item-price {
+  font-size: 1.2rem;
+}
+
+.shopping-cart .remove-item {
+  position: absolute;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.shopping-cart .remove-item:hover {
+  color: var(--primary);
+}
+
 /* hero section */
 .hero {
   min-height: 100vh;
@@ -495,7 +546,7 @@ footer .credit a {
     background-color: #222;
     width: 30rem;
     height: 100vh;
-    transition: 0.3s;
+    transition: 0.8s;
   }
 
   .navbar .navbar-nav.active {
