--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,6 @@ footer .credit a {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.9);
 }
@@ -540,6 +539,19 @@ footer .credit a {
   padding: 1.2rem;
   border: 1px solid #666;
   width: 75%;
+  animation: animateModal 0.6s;
+}
+
+/* modal animation */
+@keyframes animateModal {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 .modal-container .close-icon {
